--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -1,16 +1,19 @@
-<ul>
-    <li>Facundo D'alessio</li>
-    <li>24 años</li>
-    <li>Un poco sobre mi:
-        <ul>
-            <li>Programador BackEnd Junior en Baufest.</li>
-            <li>Estudiante de programacion en la UTN.</li>
-        </ul>
-    </li>
-    <li>Juego propio:
-        <ul>
-            <li>Explicacion del juego.</li>
-        </ul>
-    </li>
-</ul>
+<div class="quienSoy">
+    <ul class="lista">
+        <img src="../../../assets/img/Yo.jpg" alt="Facundo D'alessio">
+        <li>Facundo D'alessio</li>
+        <li>24 años</li>
+        <li>Un poco sobre mi:
+            <ul>
+                <li>Programador BackEnd Junior en Baufest.</li>
+                <li>Estudiante de programacion en la UTN.</li>
+            </ul>
+        </li>
+        <li>Juego propio:
+            <ul>
+                <li>Explicacion del juego.</li>
+            </ul>
+        </li>
+    </ul>
+</div>
   
