--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -1,3 +1,8 @@
-<button routerLink="/home">Home</button>
-<button routerLink="/login">Login</button>
-<button routerLink="/quienSoy">¿Quien soy?</button>
+<div class="navBar">
+    <button mat-raised-button routerLink="/login" *ngIf="!usuarioService.logeado">Login</button>
+    <button mat-raised-button *ngIf="usuarioService.logeado" (click)="logOut()">LogOut</button>
+    <button mat-raised-button routerLink="/quienSoy">¿Quien soy?</button>
+    <button routerLink="/home" mat-icon-button color="primary">
+        <mat-icon>home</mat-icon>
+    </button>
+</div>
