--- a/src/app/componentes/registro/registro.component.css
+++ b/src/app/componentes/registro/registro.component.css
@@ -1,4 +1,4 @@
-.login{
+.registro{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,14 +12,14 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.login .form mat-form-field {
+.registro .form mat-form-field {
     width: 80%;
     display: block; 
     margin: 0 auto;
 }
-  
-button{
-    margin: auto 5px;
+
+.form button{
+    margin-bottom: 2%;
 }
 
 .error{
