--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,1 +1,17 @@
 <h1>Sala de Juegos</h1>
+
+<mat-card class="juegoCard">
+    <mat-card-header>
+        <mat-card-title>Ahorcado</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src="../../../assets/ahorcado/img7.png" alt="Ahorcado" class="juegoImg">
+    <mat-card-content>
+        <p>
+          El famoso juego ahorcado, se tiene que adivinar una palabra, poniendo letra por letra.
+          Si la letra indicada no se encuentra, se pierde una vida, el jugador cuenta con 6 vidas.
+        </p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-button routerLink="/ahorcado">JUGAR</button>
+    </mat-card-actions>
+</mat-card>
