--- a/src/app/componentes/login/login.component.css
+++ b/src/app/componentes/login/login.component.css
@@ -8,8 +8,9 @@
 .form{
     width: 40%;
     text-align: center;
-    /* background-color: rgba(0, 0, 0, 0.1); */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgb(62, 92, 118);
+    box-shadow: 0px 0px 10px rgba(62, 92, 118, 0.5);
+    border-radius: 10px;
 }
 
 .login .form mat-form-field {
@@ -18,10 +19,17 @@
     margin: 0 auto;
 }
   
-button{
+.form button{
     margin: auto 5px;
+    background-color: #F0EBD8;
 }
 
 .error{
-    color: red;
+    color: #e63946;
+    font-size: large;
+    font-weight: 500;
+}
+
+h1, p{
+    color: #F0EBD8;
 }
