--- a/src/app/componentes/quien-soy/quien-soy.component.css
+++ b/src/app/componentes/quien-soy/quien-soy.component.css
@@ -3,12 +3,13 @@
 }
 
 .lista {
-    /* background-color: rgba(0, 0, 0, 0.1); */
+    background-color: rgb(62, 92, 118);
     list-style-type: none;
     padding: 20px;
     margin: 0 auto;
     width: 300px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px rgba(62, 92, 118, 0.5);
+    border-radius: 10px;
 }
 
 .lista li {
@@ -21,6 +22,10 @@
 
 img{
     width: 80%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+}
+
+li{
+    color: #F0EBD8;
 }
   
