--- a/src/app/componentes/registro/registro.component.css
+++ b/src/app/componentes/registro/registro.component.css
@@ -8,8 +8,9 @@
 .form{
     width: 40%;
     text-align: center;
-    /* background-color: rgba(0, 0, 0, 0.1); */
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: rgb(62, 92, 118);
+    box-shadow: 0px 0px 10px rgba(62, 92, 118, 0.5);
+    border-radius: 10px;
 }
 
 .registro .form mat-form-field {
@@ -20,8 +21,15 @@
 
 .form button{
     margin-bottom: 2%;
+    background-color: #F0EBD8;
 }
 
 .error{
-    color: red;
+    color: #e63946;
+    font-size: large;
+    font-weight: 500;
+}
+
+h1{
+    color: #F0EBD8;
 }
