--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,17 +1,36 @@
 <h1>Sala de Juegos</h1>
 
-<mat-card class="juegoCard">
-    <mat-card-header>
-        <mat-card-title>Ahorcado</mat-card-title>
-    </mat-card-header>
-    <img mat-card-image src="../../../assets/ahorcado/img7.png" alt="Ahorcado" class="juegoImg">
-    <mat-card-content>
-        <p>
-          El famoso juego ahorcado, se tiene que adivinar una palabra, poniendo letra por letra.
-          Si la letra indicada no se encuentra, se pierde una vida, el jugador cuenta con 6 vidas.
-        </p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button routerLink="/ahorcado">JUGAR</button>
-    </mat-card-actions>
-</mat-card>
+<div>
+    <mat-card class="juegoCard">
+        <mat-card-header>
+            <mat-card-title>Ahorcado</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="../../../assets/ahorcado/img7.png" alt="Ahorcado" class="imgAhorcado">
+        <mat-card-content>
+            <p>
+              El famoso juego ahorcado, se tiene que adivinar una palabra, poniendo letra por letra.
+              Si la letra indicada no se encuentra, se pierde una vida, el jugador cuenta con 6 vidas.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button routerLink="/ahorcado">JUGAR</button>
+        </mat-card-actions>
+    </mat-card>
+    
+    <mat-card class="juegoCard">
+        <mat-card-header>
+            <mat-card-title>Mayor o Menor</mat-card-title>
+        </mat-card-header>
+        <img mat-card-image src="../../../assets/img/mayorMenor.png" alt="Mayor menor" class="imgMayorMenor">
+        <mat-card-content>
+            <p>
+              Ves una carta y tenes que decir si la proxima carta va a ser mayor o menor.
+              Si acertas sumas un 1 punto, asi hasta terminar el mazo.
+              Se juega con cartas españolas.
+            </p>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button routerLink="/mayorMenor">JUGAR</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
