--- a/src/app/componentes/mayor-menor/mayor-menor.component.css
+++ b/src/app/componentes/mayor-menor/mayor-menor.component.css
@@ -14,7 +14,7 @@ img{
     width: 20%;
 }
 
-.botones button, .reiniciar{
+.botones button, .reiniciar, .finalizar{
     margin: 5px;
     background-color: #F0EBD8;
 }
