--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet />
+<div class="body">
+    <app-nav-bar></app-nav-bar>
+    <router-outlet />
+    <app-chat></app-chat>
+</div>
