--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -56,7 +56,7 @@
             <mat-card-header>
                 <mat-card-title>Truco</mat-card-title>
             </mat-card-header>
-            <img mat-card-image src="../../../assets/img/truco.jpeg" alt="Preguntados" class="imgTruco">
+            <img mat-card-image src="../../../assets/img/truco.jpeg" alt="Truco" class="imgTruco">
             <mat-card-content>
                 <p>
                     El juego de cartas mas famoso de la argentina.
@@ -66,7 +66,7 @@
                 </p>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-button routerLink="/preguntados">JUGAR</button>
+                <button mat-button routerLink="/truco">JUGAR</button>
             </mat-card-actions>
         </mat-card>
     </div>
