--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -11,7 +11,12 @@
         </li>
         <li>Juego propio:
             <ul>
-                <li>Explicacion del juego.</li>
+                <li>Es el truco, con la diferencia que no se puede cantar nada, 
+                    solo se juegan las manos y el que gana 2 gana la partida.
+                    Para mas informacion sobre los valores de las cartas pueden
+                    fijarse 
+                    <span class="link"><a href="https://www.bureaudejuegos.com/reglas-truco/" target="_blank">aca</a></span>.
+                </li>
             </ul>
         </li>
     </ul>
