--- a/src/app/componentes/chat/chat/chat.component.html
+++ b/src/app/componentes/chat/chat/chat.component.html
@@ -1,4 +1,4 @@
-<button mat-icon-button class="icon" (click)="mostrarChat = true" *ngIf="!mostrarChat && usuarioService.getEmailLogeado()">
+<button mat-icon-button class="icon" (click)="abrirConScroll()" *ngIf="!mostrarChat && usuarioService.getEmailLogeado()">
     <mat-icon class="icono">message</mat-icon>
 </button>
 
